修复：现在可以正确完成评测test string的流程了